--- a/iCapture/WebContent/WEB-INF/config/app_config.properties
+++ b/iCapture/WebContent/WEB-INF/config/app_config.properties
@@ -1,22 +1,22 @@
 ##项目全局配置
-app.copyright=bolgs
+app.copyright=iCapture
 
 ##数据库配置
 
-## default
-db.mysql.driverClass		= oracle.jdbc.OracleDriver
-db.mysql.jdbcUrl			= jdbc:oracle:thin:@127.0.0.1:1521:orcl
-db.mysql.user				= DEMO
-db.mysql.password			= DEMO
-db.mysql.initialPoolSize	= 4
-db.mysql.minPoolSize		= 2
-db.mysql.maxPoolSize		= 8
+## oracle
+db.oracle.driverClass		= oracle.jdbc.OracleDriver
+db.oracle.jdbcUrl			= jdbc:oracle:thin:@127.0.0.1:1521:orcl
+db.oracle.user				= DEMO
+db.oracle.password			= DEMO
+db.oracle.initialPoolSize	= 4
+db.oracle.minPoolSize		= 2
+db.oracle.maxPoolSize		= 8
 
-## mysql
+## default
 db.default.driverClass		= com.mysql.jdbc.Driver
 #db.default.jdbcUrl			= jdbc:mysql://192.168.1.188:3306/capture?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=GBK
-#db.default.user				= test
-#db.default.password			= 123456
+#db.default.user			= test
+#db.default.password		= 123456
 db.default.jdbcUrl			= jdbc:mysql://127.0.0.1:3306/capture?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=GBK
 db.default.user				= root
 db.default.password			= root
