--- a/iCapture/WebContent/WEB-INF/config/app_config.properties
+++ b/iCapture/WebContent/WEB-INF/config/app_config.properties
@@ -25,4 +25,4 @@ db.default.minPoolSize		= 2
 db.default.maxPoolSize		= 8
 
 ## 放行URL请求
-url_login_no				= /login/toLogin,/login/doLogin
+url_login_no				= /login/toLogin,/login/doLogin,/main/login
