--- a/iCapture/WebContent/WEB-INF/config/app_config.properties
+++ b/iCapture/WebContent/WEB-INF/config/app_config.properties
@@ -17,7 +17,7 @@ db.default.driverClass		= com.mysql.jdbc.Driver
 #db.default.jdbcUrl			= jdbc:mysql://192.168.1.188:3306/capture?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=GBK
 #db.default.user			= test
 #db.default.password		= 123456
-db.default.jdbcUrl			= jdbc:mysql://127.0.0.1:3306/capture?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=GBK
+db.default.jdbcUrl			= jdbc:mysql://127.0.0.1:3306/capture?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8
 db.default.user				= root
 db.default.password			= root
 db.default.initialPoolSize	= 4
