--- a/iCapture/WebContent/WEB-INF/config/app_config.properties
+++ b/iCapture/WebContent/WEB-INF/config/app_config.properties
@@ -2,23 +2,19 @@
 app.copyright=iCapture
 
 ##数据库配置
-
 ## oracle
-db.oracle.driverClass		= oracle.jdbc.OracleDriver
-db.oracle.jdbcUrl			= jdbc:oracle:thin:@127.0.0.1:1521:orcl
-db.oracle.user				= DEMO
-db.oracle.password			= DEMO
-db.oracle.initialPoolSize	= 4
+db.oracle.driverClass			= oracle.jdbc.OracleDriver
+db.oracle.jdbcUrl					= jdbc:oracle:thin:@127.0.0.1:1521:orcl
+db.oracle.user						= DEMO
+db.oracle.password				= DEMO
+db.oracle.initialPoolSize		= 4
 db.oracle.minPoolSize		= 2
 db.oracle.maxPoolSize		= 8
 
 ## default
-db.default.driverClass		= com.mysql.jdbc.Driver
-#db.default.jdbcUrl			= jdbc:mysql://192.168.1.188:3306/capture?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=GBK
-#db.default.user			= test
-#db.default.password		= 123456
-db.default.jdbcUrl			= jdbc:mysql://127.0.0.1:3306/capture?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8
-db.default.user				= root
+db.default.driverClass			= com.mysql.jdbc.Driver
+db.default.jdbcUrl				= jdbc:mysql://127.0.0.1:3306/capture?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=UTF-8
+db.default.user						= root
 db.default.password			= root
 db.default.initialPoolSize	= 4
 db.default.minPoolSize		= 2
