完成全部数据库修改整合

--- a/iCapture/WebContent/WEB-INF/config/app_config.properties
+++ b/iCapture/WebContent/WEB-INF/config/app_config.properties
@@ -13,7 +13,7 @@ db.oracle.maxPoolSize		= 8
 
 ## default
 db.default.driverClass			= com.mysql.jdbc.Driver
-db.default.jdbcUrl				= jdbc:mysql://127.0.0.1:3306/capture?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=UTF-8
+db.default.jdbcUrl				= jdbc:mysql://127.0.0.1:3306/capture_mh?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=UTF-8
 db.default.user						= root
 db.default.password			= root
 db.default.initialPoolSize	= 4
